--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">AssisMed</string>
     <string name="title_home">Home</string>
     <string name="title_chat">Chat</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_about">About</string>
 </resources>
